bug in view fixed

--- a/templates/buttons.html
+++ b/templates/buttons.html
@@ -1,7 +1,7 @@
 
 
 
-{% if cities.count > 0 %}
+{% if cities.Available_count > 0 %}
 
 {{cities.Table_name}} now has {{cities.Available_count}} seat(s) available - ${{cities.Price}} per seats<br>
 click number of seats you want to reserve, will be held for 3 minutes once you click<br>  
